Enhancing responsiveness in Portfolio section

--- a/public/index.html
+++ b/public/index.html
@@ -21,16 +21,13 @@
                 <span class="intro-job-title">Front-end Developer</span>
             </h1>
             <p class="intro-message">
-                Welcome!
-                <br/>I'm a London based web developer with 17 years of commercial experience.
+                Welcome! I'm a London based web developer with 17 years of commercial experience.
                 <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
                 <br/>I strive to write clean, modular and expressive code, which feels like poetry.
                 <br/>Give a look to my work.
             </p>
-            <h3 class="intro-teaser-title">
-                My Projects
-                <span class="arrow-down"><</span>
-            </h3>
+            <h3 class="intro-teaser-title">My Projects</h3>
+            <div class="arrow-down"><</div>
         </header>
         <video class="intro-video" height="100%" width="100%" autoplay loop>
             <source src="/video/introB.mp4"  type="video/mp4">
@@ -59,7 +56,7 @@
                     <h4 class="portfolio-item-secondary-title">Employer:</h4>
                     <p class="portfolio-item-text">Rocket Internet SE</p>
                     <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git</p>
+                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, HTML, Twig, CSS, SASS, Grunt, Git, Bootstrap, Photoshop</p>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
@@ -90,7 +87,7 @@
             </div>
 
 
-            <div class="portfolio-item-modal-notebook-mobile modal fade" id="bk-modal" 
+            <div class="portfolio-item-modal-notebook-mobile modal fade" id="bk-modal"
                  data-modal-src="/html/modal-projects-bk.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="portfolio-item-modal-content">
@@ -207,7 +204,7 @@
                     <h4 class="portfolio-item-secondary-title">Employer:</h4>
                     <p class="portfolio-item-text">Rocket Internet SE</p>
                     <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML, Twig, CSS3, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, TDD, HTML, Twig, CSS3, SASS, Grunt, Git, Bootstrap, Photoshop</p>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
