Enhancing responsiveness in Portfolio section

--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,14 @@
             <div class="portfolio-item-desktop portfolio-item">
                 <div class="project-type-label">E-commerce in JavaScript/PHP</div>
                 <div class="portfolio-item-title-wrapper">
-                    <h3 class="portfolio-item-title">Burger King</h3>
-                    <h4 class="portfolio-item-text">Delivery Service</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Rocket Internet SE</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, HTML, Twig, CSS, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Burger King</h3>
+                        <h4 class="portfolio-item-text">Delivery service</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Rocket Internet SE</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, HTML, Twig, CSS, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
@@ -101,12 +103,14 @@
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">Website in JavaScript/PHP</div>
                 <div class="portfolio-item-title-wrapper">
-                    <h3 class="portfolio-item-title">Vendomo marketing website</h3>
-                    <h4 class="portfolio-item-text">Real estate startup</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Rocket Internet SE</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop, Illustrator</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Vendomo<br/>marketing website</h3>
+                        <h4 class="portfolio-item-text">Real estate startup</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Rocket Internet SE</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop, Illustrator</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
@@ -150,12 +154,14 @@
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">Web app in JavaScript/PHP</div>
                 <div class="portfolio-item-title-wrapper">
-                    <h3 class="portfolio-item-title">Vendomo <br/>CRM dashboard</h3>
-                    <h4 class="portfolio-item-text">Real estate startup</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Rocket Internet SE</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Vendomo <br/>CRM dashboard</h3>
+                        <h4 class="portfolio-item-text">Real estate startup</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Rocket Internet SE</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, jQuery, HTML5, CSS3, LESS, Gulp, Git, Bootstrap, Photoshop</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
@@ -199,12 +205,14 @@
             <div class="portfolio-item-desktop">
                 <div class="project-type-label">E-commerce in JavaScript/PHP</div>
                 <div class="portfolio-item-title-wrapper">
-                    <h3 class="portfolio-item-title">Foodora</h3>
-                    <h4 class="portfolio-item-text">Food delivery startup</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Rocket Internet SE</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, TDD, HTML, Twig, CSS3, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Foodora</h3>
+                        <h4 class="portfolio-item-text">Food delivery startup</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Rocket Internet SE</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, jQuery, Backbone.js, TDD, HTML, Twig, CSS3, SASS, Grunt, Git, Bootstrap, Photoshop</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/desktop.png">
                 <figure class="portfolio-item-img-preview">
@@ -248,12 +256,14 @@
             <figure class="portfolio-item-tv1">
                 <figcaption class="project-type-label">Smart-TV web app in JavaScript</figcaption>
                 <div class="portfolio-item-title-wrapper-horizontal">
-                    <h3 class="portfolio-item-title">TIMvision</h3>
-                    <h4 class="portfolio-item-text">On demand TV service <br/>for Samsung Smart-TV</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Telecom Italia s.p.a</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">TIMvision</h3>
+                        <h4 class="portfolio-item-text">On demand TV service <br/>for Samsung Smart-TV</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Telecom Italia s.p.a</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
                 <figure class="portfolio-item-img-preview">
@@ -282,12 +292,14 @@
             <figure class="portfolio-item-tv1">
                 <figcaption class="project-type-label">Smart-TV web app in JavaScript</figcaption>
                 <div class="portfolio-item-title-wrapper-horizontal">
-                    <h3 class="portfolio-item-title">CuboMusica</h3>
-                    <h4 class="portfolio-item-text">Music streaming <br/>for Samsung Smart-TV</h4>
-                    <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                    <p class="portfolio-item-text">Telecom Italia s.p.a</p>
-                    <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                    <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">CuboMusica</h3>
+                        <h4 class="portfolio-item-text">Music streaming <br/>for Samsung Smart-TV</h4>
+                        <h4 class="portfolio-item-secondary-title">Employer:</h4>
+                        <p class="portfolio-item-text">Telecom Italia s.p.a</p>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">JavaScript, AJAX, HTML5, CSS3, XML, Samsung Web API</p>
+                    </div>
                 </div>
                 <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
                 <figure class="portfolio-item-img-preview">
@@ -314,8 +326,15 @@
 
         <article class="article-body portfolio-item-unicri js-portfolio-item">
             <div class="portfolio-item-notebook notebooks-set-item1">
-                <span class="project-type-label">Website</span>
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+                <span class="project-type-label">Website</span>
+                <div class="portfolio-item-title-wrapper-horizontal">
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Websites for UNICRI<br/>United Nations</h3>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">HTML, CSS, JavaScript, jQuery, CMS, UX/UI Design, Photoshop</p>
+                    </div>
+                </div>
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/ande-preview-notebook.jpg">
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
@@ -353,13 +372,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-            <div class="portfolio-item-title-wrapper-horizontal">
-                <h3 class="portfolio-item-title">Websites for<br/>United Nations</h3>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">UNICRI</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">HTML, CSS, JavaScript, jQuery, CMS, UX/UI Design, Photoshop</p>
-            </div>
 
             <div class="portfolio-item-modal-notebook modal fade" id="unicri-modal"
                  data-modal-src="/html/modal-projects-unicri.html" tabindex="-1" role="dialog" aria-labelledby="unicri-modalLabel" aria-hidden="true">
@@ -372,10 +384,16 @@
         </article>
 
         <article class="article-body portfolio-item-others js-portfolio-item">
-
             <div class="portfolio-item-notebook notebooks-set-item1">
-                <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
                 <span class="project-type-label">Website</span>
+                <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+                <div class="portfolio-item-title-wrapper-horizontal">
+                    <div class="portfolio-item-title-content">
+                        <h3 class="portfolio-item-title">Websites for various clients</h3>
+                        <h4 class="portfolio-item-secondary-title">Contribution:</h4>
+                        <p class="portfolio-item-text">UX/UI, HTML, CSS, SASS, JavaScript, jQuery, Wordpress, Photoshop</p>
+                    </div>
+                </div>
                 <figure class="portfolio-item-img-preview">
                     <img class="portfolio-item-img" src="/img/portfolio/school-preview-notebook.jpg">
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
@@ -413,16 +431,6 @@
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
-
-            <div class="portfolio-item-title-wrapper-horizontal">
-                <h3 class="portfolio-item-title">Everything else</h3>
-                <h4 class="portfolio-item-text">Websites for various clients</h4>
-                <h4 class="portfolio-item-secondary-title">Employer:</h4>
-                <p class="portfolio-item-text">Self-employed</p>
-                <h4 class="portfolio-item-secondary-title">Contribution:</h4>
-                <p class="portfolio-item-text">HTML, CSS, SASS, JavaScript, jQuery, Wordpress, Grunt, UX/UI Design, Photoshop</p>
-            </div>
-
             <div class="portfolio-item-modal-notebook modal fade" id="others-modal"
                  data-modal-src="/html/modal-projects-others.html" tabindex="-1" role="dialog" aria-labelledby="others-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
