--- a/public/html/modal-projects-vendomo-crm.html
+++ b/public/html/modal-projects-vendomo-crm.html
@@ -1,79 +1,84 @@
-<div class="portfolio-item-modal-details-wrapper">
-    <h3 class="portfolio-item-modal-title">Vendomo CRM dashboard</h3>
-    <h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>
-    <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
-    <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
-</div>
-<div class="portfolio-item-notebook">
-    <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-    <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
+<!--<div class="portfolio-item-modal-details-wrapper">-->
+    <!--<h3 class="portfolio-item-modal-title">Vendomo CRM dashboard</h3>-->
+    <!--<h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>-->
+    <!--<p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>-->
+    <!--<p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>-->
+<!--</div>-->
 
+<div class="portfolio-item-notebook-wrapper">
+    <div class="portfolio-item-notebook">
+        <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+        <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-01-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-02-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-03-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-04-notebook.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
         <ol class="carousel-indicators">
             <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
             <li data-target="#vendomo-crm-main-carousel" data-slide-to="1"></li>
             <li data-target="#vendomo-crm-main-carousel" data-slide-to="2"></li>
             <li data-target="#vendomo-crm-main-carousel" data-slide-to="3"></li>
         </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-01-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-02-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-03-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-04-notebook.jpg">
-                </div>
-            </div>
+        <ul class="carousel-labels">
+            <li class="carousel-label active">Overview</li>
+            <li class="carousel-label">Appointments</li>
+            <li class="carousel-label">Candidates</li>
+            <li class="carousel-label">Candidate details</li>
+        </ul>
+        <div class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
+            <
+            <span class="sr-only">Previous</span>
+        </div>
+        <div class="right carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="next">
+            >
+            <span class="sr-only">Next</span>
         </div>
     </div>
-    <ul class="carousel-labels">
-        <li class="carousel-label active">Overview</li>
-        <li class="carousel-label">Appointments</li>
-        <li class="carousel-label">Candidates</li>
-        <li class="carousel-label">Candidate details</li>
-    </ul>
-    <a class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
-        <
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="next">
-        >
-        <span class="sr-only">Next</span>
-    </a>
 </div>
-<div class="portfolio-item-mobile">
-    <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-    <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-01-mobile.jpg">
+
+<div class="portfolio-item-mobile-wrapper">
+    <div class="portfolio-item-mobile">
+        <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
+        <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-01-mobile.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-02-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-02-mobile.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-03-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-03-mobile.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-04-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-crm-04-mobile.jpg">
+                    </div>
                 </div>
             </div>
         </div>
