Enhanced responsiveness for portfolio modal

--- a/public/html/modal-projects-vendomo-crm.html
+++ b/public/html/modal-projects-vendomo-crm.html
@@ -1,11 +1,10 @@
-<!--<div class="portfolio-item-modal-details-wrapper">-->
-    <!--<h3 class="portfolio-item-modal-title">Vendomo CRM dashboard</h3>-->
-    <!--<h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>-->
-    <!--<p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>-->
-    <!--<p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>-->
-<!--</div>-->
-
-<div class="portfolio-item-notebook-wrapper">
+<div class="portfolio-item-modal-wrapper">
+    <div class="portfolio-item-modal-details-wrapper">
+        <h3 class="portfolio-item-modal-title">Vendomo CRM dashboard</h3>
+        <h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>
+        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
+        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
+    </div>
     <div class="portfolio-item-notebook">
         <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
         <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
@@ -31,13 +30,13 @@
                     </div>
                 </div>
             </div>
+            <ol class="carousel-indicators">
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="1"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="2"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="3"></li>
+            </ol>
         </div>
-        <ol class="carousel-indicators">
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="1"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="2"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="3"></li>
-        </ol>
         <ul class="carousel-labels">
             <li class="carousel-label active">Overview</li>
             <li class="carousel-label">Appointments</li>
@@ -53,9 +52,6 @@
             <span class="sr-only">Next</span>
         </div>
     </div>
-</div>
-
-<div class="portfolio-item-mobile-wrapper">
     <div class="portfolio-item-mobile">
         <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
         <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
