Responsiveness for About, Contact and Outro sections

--- a/public/index.html
+++ b/public/index.html
@@ -452,7 +452,7 @@
             <h2 class="section-header-title">Skills</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <div class="article-body">
@@ -466,7 +466,7 @@
                         <li>React</li>
                         <li>jQuery</li>
                         <li>Lodash</li>
-                        <li>TDD/BDD</li>
+                        <li>Jasmine</li>
                     </ul>
                 </div>
             </div>
@@ -488,6 +488,7 @@
                     <img class="cogwheel" src="/img/portfolio/cogwheel-medium.svg">
                     <h3 class="skills-list-title">HTML</h3>
                     <ul>
+                        <li>Twig</li>
                         <li>Accessibility</li>
                         <li>SEO</li>
                     </ul>
@@ -513,6 +514,7 @@
                         <li>Grunt</li>
                         <li>Git/GitHub</li>
                         <li>SVN</li>
+                        <li>Jira/Agile</li>
                     </ul>
                 </div>
             </div>
@@ -525,6 +527,7 @@
                         <li>Functional</li>
                         <li>Modular</li>
                         <li>Design patterns</li>
+                        <li>TDD/BDD</li>
                     </ul>
                 </div>
             </div>
@@ -552,7 +555,7 @@
             <h2 class="section-header-title">Experience</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <article class="article-body">
@@ -828,7 +831,7 @@
             <h2 class="section-header-title">About me</h2>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <article class="article-body">
@@ -1050,8 +1053,8 @@
             <span class="section-header-subtitle">Front-end Developer</span>
             <h2 class="section-header-title">Contact</h2>
             <nav class="section-header-nav">
-                <button class="article-header__nav__button" onClick="scrollToElement('#about')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
         <div class="article-body">
@@ -1083,11 +1086,10 @@
             <figure class="section-header-img-wrapper">
                 <img class="section-header-img" src="/img/outro.png">
             </figure>
-            <span class="section-header-subtitle">Thank you for visiting!</span>
-            <span class="section-header-subtitle">Hope to hear from you soon.</span>
+            <div class="section-header-sub-title">Thank you for visiting!<br/>Hope to hear from you soon.</div>
             <nav class="section-header-nav">
                 <button class="article-header__nav__button" onClick="scrollToElement('#portfolio')">Projects</button><button class="article-header__nav__button" onClick="scrollToElement('#skills')">Skills</button><button class="article-header__nav__button" onClick="scrollToElement('#experience')">Experience</button><button class="article-header__nav__button" onClick="scrollToElement('#about')">About</button><button class="article-header__nav__button" onClick="scrollToElement('#contact')">Contact</button>
-                <br/><a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
+                <a class="article-header__nav__button" href="https://github.com/pavelmaximov" target="_blank">GitHub</a><a class="article-header__nav__button" href="http://www.pavelmaximov.com/resume-frontend-pavel-maximov.pdf" target="_blank">Resume</a>
             </nav>
         </header>
     </section>
