Enhancing general responsiveness

--- a/public/html/modal-projects-unicri.html
+++ b/public/html/modal-projects-unicri.html
@@ -1,6 +1,6 @@
 <div class="portfolio-item-modal-wrapper">
     <div class="portfolio-item-modal-details-wrapper">
-        <h3 class="portfolio-item-modal-title">Websites for United Nations</h3>
+        <h3 class="portfolio-item-modal-title">Websites for UNICRI (United Nations)</h3>
         <h4 class="portfolio-item-modal-subtitle"></h4>
         <p>As Front-end Developer at UNICRI (United Nations agency), I was in charge of creating 3 promotional websites and 2 e-learning portals. The websites were for projects in the field of security and counter-terrorism, jointly created by United Nations and European Union. For all of them I made the designs and implemented the HTML/CSS pages. For some of them I also set up and customised the CMS. Some of those websites contained restricted data.</p>
         <p>Technologies: HTML, CSS, JavaScript, jQuery, CMS, UX/UI Design, Photoshop.</p>
