--- a/public/html/modal-projects-vendomo.html
+++ b/public/html/modal-projects-vendomo.html
@@ -1,6 +1,6 @@
 <div class="portfolio-item-modal-wrapper">
     <div class="portfolio-item-modal-details-wrapper">
-        <h3 class="portfolio-item-modal-title">Vendomo marketing website</h3>
+        <h3 class="portfolio-item-modal-title">Vendomo</h3>
         <h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>
         <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
         <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
