Enhancing responsiveness for Intro section

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,15 @@
             </h1>
             <p class="intro-message">
                 Welcome! I'm a London based web developer with 17 years of commercial experience.
-                <br/>I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
-                <br/>I strive to write clean, modular and expressive code, which feels like poetry.
-                <br/>Give a look to my work.
+            </p>
+            <p class="intro-message">
+                I love to code cool features in JavaScript and create beautiful and responsive CSS layouts.
+            </p>
+            <p class="intro-message">
+                I strive to write clean, modular and expressive code, which feels like poetry.
+            </p>
+            <p class="intro-message">
+                Give a look to my work.
             </p>
             <h3 class="intro-teaser-title">My Projects</h3>
             <div class="arrow-down"><</div>
@@ -1080,18 +1086,24 @@
             </p>
             <h3 class="contact-title">Contact me</h3>
             <div class="contact-methods">
-                <span class="contact-method">
-                    <img class="contact-method-img" src="/img/email.svg">
-                    pavel@maximov.it
-                </span>
-                <span class="contact-method">
-                    <img class="contact-method-img" src="/img/phone.svg">
-                    +44 7887 66 4218
-                </span>
-                <span class="contact-method">
-                    <img class="contact-method-img" src="/img/linkedin.svg">
-                    <a class="contact-method-link" href="https://de.linkedin.com/in/frontendlondon" target="_blank">LinkedIn</a>
-                </span>
+                <div class="contact-method-wrapper">
+                    <div class="contact-method">
+                        <img class="contact-method-img" src="/img/email.svg">
+                        pavel@maximov.it
+                    </div>
+                </div>
+                <div class="contact-method-wrapper">
+                    <div class="contact-method">
+                        <img class="contact-method-img" src="/img/phone.svg">
+                        +44 7887 66 4218
+                    </div>
+                </div>
+                <div class="contact-method-wrapper">
+                    <div class="contact-method">
+                        <img class="contact-method-img" src="/img/linkedin.svg">
+                        <a class="contact-method-link" href="https://de.linkedin.com/in/frontendlondon" target="_blank">LinkedIn</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
