Enhancing responsiveness for Portfolio section

--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@
                 </div>
                 <div class="portfolio-item-notebook notebooks-set-item4">
                     <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                    <span class="project-type-label">E-commerce</span>
+                    <span class="project-type-label">E-comm.</span>
                     <figure class="portfolio-item-img-preview">
                         <img class="portfolio-item-img" src="/img/portfolio/pandora-preview-notebook.jpg">
                         <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
