Enhancing responsiveness for Portfolio modals

--- a/public/html/modal-projects-bk.html
+++ b/public/html/modal-projects-bk.html
@@ -1,10 +1,4 @@
 <div class="portfolio-item-modal-wrapper">
-    <div class="portfolio-item-modal-details-wrapper">
-        <h3 class="portfolio-item-modal-title">Burger King</h3>
-        <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
-        <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
-        <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
-    </div>
     <div class="portfolio-item-notebook">
         <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
         <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
@@ -29,12 +23,23 @@
                         <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-notebook.jpg">
                     </div>
                 </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="portfolio-item-modal-details-wrapper">
+                            <h3 class="portfolio-item-modal-title">Burger King</h3>
+                            <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
+                            <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
+                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <ol class="carousel-indicators">
                 <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
                 <li data-target="#bk-main-carousel" data-slide-to="1"></li>
                 <li data-target="#bk-main-carousel" data-slide-to="2"></li>
                 <li data-target="#bk-main-carousel" data-slide-to="3"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="4"></li>
             </ol>
         </div>
         <ul class="carousel-labels">
@@ -74,6 +79,14 @@
                 <div class="carousel-item tse-scrollable wrapper">
                     <div class="tse-content">
                         <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="portfolio-item-modal-details-wrapper">
+                            <h3 class="portfolio-item-modal-title">Burger King</h3>
+                            <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
+                        </div>
                     </div>
                 </div>
             </div>
